--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,49 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body id="bg-img">
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+
+        <nav class="menu">
+          <div class="menu-branding">
+            <div class="portrait"></div>
+          </div>
+            <li class="nav-item">
+              <a href="/" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="/about" class="nav-link">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a href="/work" class="nav-link">My Work</a>
+            </li>
+            <li class="nav-item">
+              <a href="/contact" class="nav-link">How To Reach Me</a>
+            </li>
+          <ul class="menu-nav">
+
+          </ul>
+        </nav>
+    </header>
+
+    <main id="home">
+      <h1 class="lg-heading">Thaddaeus <span class="text-secondary">Lounds</span></h1>
+      <h2 class="sm-heading">Problem Solver | Software Devleoper | AI Developer | Entrepreneur</h2>
+      <div class="icon">
+        <a href=""> <i class="fab fa-twitter fa-2x"></i> </a>
+        <a href=""> <i class="fab fa-facebook fa-2x"></i> </a>
+        <a href=""> <i class="fab fa-linkedin fa-2x"></i> </a>
+        <a href=""> <i class="fab fa-github fa-2x"></i> </a>
+      </div>
+    </main>
+<script src="/javascripts/main.js"></script>
   </body>
 </html>
