--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,12 @@
         <div class="btn-line"></div>
         <div class="btn-line"></div>
       </div>
-
         <nav class="menu">
           <div class="menu-branding">
             <div class="portrait"></div>
           </div>
-            <li class="nav-item">
+          <ul class="menu-nav">
+            <li class="nav-item current">
               <a href="/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
@@ -29,9 +29,7 @@
             <li class="nav-item">
               <a href="/contact" class="nav-link">How To Reach Me</a>
             </li>
-          <ul class="menu-nav">
-
-          </ul>
+          </ul>  
         </nav>
     </header>
 
