--- a/public/stylesheets/_menu.scss
+++ b/public/stylesheets/_menu.scss
@@ -12,7 +12,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: white;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
 
@@ -43,7 +43,7 @@
     width: 100%;
     opacity: .9;
     visibility: hidden;
-    
+
     &.show{
         visibility: visible;
     }
@@ -62,7 +62,7 @@
     &-nav {
         margin: 0;
         padding: 0;
-        background: darken($primary-color, 5); 
+        background: darken($primary-color, 5);
         list-style: none;
         transform: translate3d(0, -100%, 0);
         @include easeOut;
@@ -109,7 +109,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: white;
+        color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut;
         &:hover {
@@ -118,9 +118,9 @@
     }
 }
 
-//Slow down nav item 
+//Slow down nav item
 @for $x from 1 through 4 {
     .nav-item:nth-child(#{$x}) {
-        transition-delay: $x * .1s; 
+        transition-delay: $x * .1s;
     }
 }
