--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,13 +1,15 @@
 @import 'config';
 @import 'menu';
+@import 'mobile';
+
 * {
     box-sizing: border-box;
 }
 
-body { 
+body {
     @include background;
-    background: $primary-color; 
-    color: whitesmoke;
+    background: $primary-color;
+    color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
