--- a/public/stylesheets/_config.scss
+++ b/public/stylesheets/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
-$home-image: url(../images/foto2.jpg);
+$home-image: url(../images/foto.jpg);
 $background-opacity: 0.9;
 
 
