--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,7 +130,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5; }
   body#bg-img {
-    background: url(../images/foto2.jpg);
+    background: url(../images/foto.jpg);
     background-attachment: fixed;
     background-size: cover; }
     body#bg-img:after {
