finished rought draft of about page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,14 +1,83 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About</title>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-  <h2>About Page</h2>
-</body>
+<html>
+  <head>
+    <title>About Me</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+  </head>
+  <body>
+    <header>
+      <div class="menu-btn">
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+        <div class="btn-line"></div>
+      </div>
+        <nav class="menu">
+          <div class="menu-branding">
+            <div class="portrait"></div>
+          </div>
+          <ul class="menu-nav">
+            <li class="nav-item ">
+              <a href="/" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item current">
+              <a href="/about" class="nav-link">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a href="/work" class="nav-link">My Work</a>
+            </li>
+            <li class="nav-item">
+              <a href="/contact" class="nav-link">How To Reach Me</a>
+            </li>
+          </ul>  
+        </nav>
+    </header>
+
+    <main id="about">
+      <h1 class="lg-heading">About <span class="text-secondary">Me</span></h1>
+      <h2 class="sm-heading">Here's a few things about myself!</h2>
+      <div class="about-info">
+        <img src="../images/foto2.jpg" alt="Thad Lounds" class="bio-image">
+        <div class="bio">
+          <h3 class="text-secondary">BIO</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae in odio aperiam ut quis ratione magnam reiciendis nulla 
+            rerum sint, maiores ab deserunt ipsam optio natus accusantium eligendi repellat tenetur distinctio quaerat quia minima mollitia 
+            autem eaque. Distinctio cumque blanditiis voluptatum quo rem! Maxime aliquam animi delectus ea laudantium totam atque quaerat 
+            officia deserunt repudiandae dolores molestias ullam voluptate quos, dolore ipsam. Nobis veritatis harum adipisci animi a? Doloribus, 
+            earum delectus? Qui incidunt, quidem deserunt molestias iusto asperiores fugit adipisci. Maxime voluptates id ipsum aut. Quisquam eum 
+            odit vel ut.</p>
+        </div>
+
+        <div class="job job-1">
+          <h3> Web Development</h3>
+          <h6>Full Stack Developer</h6>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem possimus fuga fugiat voluptates ipsum illo praesentium, facere quisquam \
+             eligendi alias culpa atque modi itaque omnis eaque minus. Cumque, facilis reiciendis.</p>
+        </div>
+
+        <div class="job job-2">
+            <h3> Artifical Intelligence | Machine Learning</h3>
+            <h6>Aprentice</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem possimus fuga fugiat voluptates ipsum illo praesentium, facere quisquam \
+               eligendi alias culpa atque modi itaque omnis eaque minus. Cumque, facilis reiciendis.</p>
+        </div>
+
+        <div class="job job-3">
+            <h3> Photography </h3>
+            <h6>Wildlife | LandScape | Portrait</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem possimus fuga fugiat voluptates ipsum illo praesentium, facere quisquam \
+               eligendi alias culpa atque modi itaque omnis eaque minus. Cumque, facilis reiciendis.</p>
+        </div>
+
+
+      </div>
+    </main>
+
+    <FOOTER id="main-footer">
+      Copyright &copy; 2019
+    </FOOTER>
+
+<script src="/javascripts/main.js"></script>
+  </body>
 </html>
+
