--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,5 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
 * {
     box-sizing: border-box;
@@ -49,7 +48,8 @@ header {
 
 main {
     padding: 4rem;
-    height: 100%;
+    // height: 100%;
+    min-height: calc(100vh-60px);
 
     .icon {
         margin-top: 1rem;
@@ -72,5 +72,54 @@ main {
     }
 }
 
+.about-info {
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas:
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3, 1fr);
+}
 
+.bio-image {
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+}
+.bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+}
+
+.bio-image {
+    width: 250px;
+    height: 250px;
+}
+
+.job-1 {
+    grid-area: job1;
+}
+.job-2 {
+    grid-area: job2;
+}
+.job-3 {
+    grid-area: job3;
+}
+.job {
+    background: lighten($color: $primary-color, $amount: 5);
+    padding: 0.5rem;
+    border-bottom: $secondary-color 5px solid;
+}
+
+#main-footer {
+    text-align: center;
+    padding: 1rem;
+    background: darken($color: $primary-color, $amount: 10);
+    color: set-text-color($primary-color);
+    height: 60px;
+}
+
+
+@import 'mobile';
 
