--- a/public/stylesheets/_mobile.scss
+++ b/public/stylesheets/_mobile.scss
@@ -1,11 +1,17 @@
 //XL
 @include mediaXl {
 
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
 }
 
 //Desktop & Laptops
-@include mediaXl {
-
+@include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 //Tablets & Ultralight
@@ -57,12 +63,20 @@
     grid-template-columns: 1fr;
   }
 
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
 }
 
 //Mobile devices
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  
+  .projects {
+    grid-template-columns:1fr;
   }
 
 }
